<resources>
    <string name="app_name">TSF_Bank</string>
    <string name="view_all_customers">View All Customers</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_FAQ">FAQ?</string>
    <string name="Help">Help</string>
    <string name="button1">Button1</string>
    <string name="button">Button</string>
    <string name="button2">Button2</string>
    <string name="select_a_customer_to_view">Select a Customer to view :</string>
    <string name="in_customeractivity">In Customeractivity</string>
    <string name="customerid">CustomerID :</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="enter_recipient_name">Enter recipient name :</string>
    <string name="enter_transfer_amount">Enter Transfer amount :</string>
    <string name="transfer_funds">Transfer Funds</string>
    <string name="customer_id">Customer Id :</string>
    <string name="customer_name">Customer Name :</string>
    <string name="balance">Balance:</string>
    <string name="nul1">-</string>
    <string name="nul2">-</string>
    <string name="nul3">-</string>
</resources>